--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head <meta name="google-site-verification" content="n0h2TI6mRuaHo0ER7Ww1-2IWH7leE6pPkRz9eMfcuso" />>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProCraft Studios | Professional Digital Services</title>
@@ -114,5 +114,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
