--- a/contact.html
+++ b/contact.html
@@ -270,21 +270,21 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h4>Email Us</h4>
-                            <p>hello@procraftstudios.com</p>
+                            <p>stepper4738@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-method">
                         <i class="fas fa-phone"></i>
                         <div>
                             <h4>Call Us</h4>
-                            <p>+1 (555) 123-4567</p>
+                            <p>9403821918</p>
                         </div>
                     </div>
                     <div class="contact-method">
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h4>Visit Us</h4>
-                            <p>New York, NY 10001</p>
+                            <p>Chh.Sambajinagar,India</p>
                         </div>
                     </div>
                 </div>
@@ -397,3 +397,4 @@
     </script>
 </body>
 </html>
+
