--- a/contact.html
+++ b/contact.html
@@ -298,7 +298,7 @@
             </div>
             
             <!-- Creative Form (CONNECTED TO YOUR EMAIL) -->
-            <form class="creative-form" action="https://formspree.io/f/xbdapgap" method="POST">
+            <form class="creative-form" action="https://formspree.io/f/xbdapgap" method="post">
                 <div class="form-group">
                     <input type="text" name="name" placeholder="Your Full Name" required>
                     <i class="fas fa-user"></i>
@@ -397,4 +397,5 @@
     </script>
 </body>
 </html>
+
 
