--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar" id="navbar">
-        <a href="index.html" class="logo">ProCraft</a>
-        <ul class="nav-menu">
-            <li><a href="index.html" class="nav-link active">Home</a></li>
-            <li><a href="services.html" class="nav-link">Services</a></li>
-            <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-            <li><a href="pricing.html" class="nav-link">Pricing</a></li>
-            <li><a href="contact.html" class="btn btn-primary nav-cta">Get Started</a></li>
-        </ul>
-        <div class="mobile-toggle" id="mobileToggle">
-            <span></span><span></span><span></span>
-        </div>
-    </nav>
+   <!-- Navigation -->
+<nav class="navbar" id="navbar">
+    <a href="index.html" class="logo">ProCraft</a>
+    <ul class="nav-menu" id="navMenu">
+        <li><a href="index.html" class="nav-link active">Home</a></li>
+        <li><a href="services.html" class="nav-link">Services</a></li>
+        <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+        <li><a href="pricing.html" class="nav-link">Pricing</a></li>
+        <li><a href="contact.html" class="btn btn-primary nav-cta">Get Started</a></li>
+    </ul>
+    <div class="mobile-toggle" id="mobileToggle">
+        <span></span><span></span><span></span>
+    </div>
+</nav>
 
     <!-- Hero Section -->
     <section class="hero" id="home">
@@ -113,3 +114,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
