--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <meta name="google-site-verification" content="n0h2TI6mRuaHo0ER7Ww1-2IWH7leE6pPkRz9eMfcuso" />
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-48RGHW9PGM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-48RGHW9PGM');
+</script>
 </head>
 <body>
     <!-- Navigation -->
@@ -116,6 +125,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
